[package]
name = "cif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.10", features = ["macros"] }
image = "0.24.0"
mimalloc = { version = "0.1.27", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"